
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
SuRun 1.2.1.0 Beta 2 - 2011-02-15
---------------------------------
* NEW: SuRun's RunAs has a new "Run elevated" Option for non restricted 
    SuRunners and Administrators

SuRun 1.2.1.0 Beta 2 - 2011-02-15
---------------------------------
* FIX: If SuRun starts %windir%\system32\cmd.exe it inserts a /D option into 
  the command line to avoid cmd from running AutoRuns

SuRun 1.2.1.0 Beta 1 - 2011-02-01
---------------------------------
* IAT-Hooks are directly loaded without a separate thread.
  When that GPF's, a thread is created to load the hooks.
* SuRunExt.Dll uses GetModuleHandleEx(GET_MODULE_HANDLE_EX_FLAG_PIN,...) to 
  prevent unloading the Dll dynamically. This effectively eliminated GPFs in 
  SuRunExt.Dll_unloaded on my Win7pro system.

SuRun 1.2.0.9 - 2010-12-23
--------------------------
* NEW: In Windows 7 Explorer can be launched with elevated rights.
* NEW: The local System is allowed as user for Backup/Restore.
* NEW: If "Start the program automagically with elevated rights." and "NEVER 
  start this program with elevated rights." are both checked, SuRun directly 
  starts the program with the rights of the current user.
  (Automagic starts Application "non elevated" on "AutoExec" and "AutoCancel")
* NEW: SuRun's ShellExecute Hook let's non-"SuRunners" use SuRun's "Run as..."
* NEW: SuRun can be forced to store and use a user's real password. 
  This hopefully solves problems in domain networks.
* NEW: Polish resources by Junne. Thanks!
* NEW: SuRun handles ShellExecute's "runas" verb "Replace RunAs with SuRuns 
  RunAs" is activated