@@ -93,8 +93,11 @@ LINK32=link.exe
 # SUBTRACT LINK32 /pdb:none
 # Begin Special Build Tool
 OutDir=.\ReleaseU
+WkspDir=.
+TargetPath=.\ReleaseU\SuRun.exe
 SOURCE="$(InputPath)"
 PreLink_Cmds=if exist $(OutDir)\SuRun.exe del /f $(OutDir)\SuRun.exe 1>NUL 2>NUL	if exist $(OutDir)\SuRun.exe $(OutDir)\SuRun.exe /DeleteService 1>NUL 2>NUL
+PostBuild_Cmds=$(WkspDir)\bin\setdllcharacteristics.exe +d +n $(TargetPath)
 # End Special Build Tool
 
 !ELSEIF  "$(CFG)" == "SuRun - Win32 x64 Unicode Release"
@@ -128,8 +131,11 @@ LINK32=link.exe
 # SUBTRACT LINK32 /pdb:none
 # Begin Special Build Tool
 OutDir=.\ReleaseUx64
+WkspDir=.
+TargetPath=.\ReleaseUx64\SuRun.exe
 SOURCE="$(InputPath)"
 PreLink_Cmds=if exist $(OutDir)\SuRun.exe del /f $(OutDir)\SuRun.exe 1>NUL 2>NUL	if exist $(OutDir)\SuRun.exe $(OutDir)\SuRun.exe /DeleteService 1>NUL 2>NUL
+PostBuild_Cmds=$(WkspDir)\bin\setdllcharacteristics.exe +d +n $(TargetPath)
 # End Special Build Tool
 
 !ELSEIF  "$(CFG)" == "SuRun - Win32 SuRun32 Unicode Release"
@@ -161,6 +167,12 @@ LINK32=link.exe
 # SUBTRACT BASE LINK32 /pdb:none /nodefaultlib
 # ADD LINK32 gdi32.lib user32.lib advapi32.lib kernel32.lib shell32.lib /nologo /subsystem:windows /map /debug /machine:I386 /out:"ReleaseUx64/SuRun32.bin" /IGNORE:4089 /OPT:REF
 # SUBTRACT LINK32 /pdb:none
+# Begin Special Build Tool
+WkspDir=.
+TargetPath=.\ReleaseUx64\SuRun32.bin
+SOURCE="$(InputPath)"
+PostBuild_Cmds=$(WkspDir)\bin\setdllcharacteristics.exe +d +n $(TargetPath)
+# End Special Build Tool
 
 !ENDIF 
 
