@@ -58,6 +58,12 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib comdlg32.lib advapi32.lib shell32.lib uuid.lib /nologo /dll /machine:I386
 # ADD LINK32 /nologo /dll /map /debug /machine:I386 /def:".\SuRunExt.Def" /out:"../ReleaseU/SuRunExt.dll" /OPT:REF /IGNORE:4089
 # SUBTRACT LINK32 /pdb:none
+# Begin Special Build Tool
+WkspDir=.
+TargetPath=..\ReleaseU\SuRunExt.dll
+SOURCE="$(InputPath)"
+PostBuild_Cmds=$(WkspDir)\bin\setdllcharacteristics.exe +d +n $(TargetPath)
+# End Special Build Tool
 
 !ELSEIF  "$(CFG)" == "SuRunExt - Win32 Unicode Debug"
 
@@ -115,6 +121,12 @@ LINK32=link.exe
 # SUBTRACT BASE LINK32 /pdb:none
 # ADD LINK32 bufferoverflowu.lib /nologo /dll /map /debug /machine:IX86 /def:".\SuRunExt.Def" /out:"../ReleaseUx64/SuRunExt.dll" /OPT:REF /IGNORE:4089 /machine:AMD64
 # SUBTRACT LINK32 /pdb:none
+# Begin Special Build Tool
+WkspDir=.
+TargetPath=..\ReleaseUx64\SuRunExt.dll
+SOURCE="$(InputPath)"
+PostBuild_Cmds=$(WkspDir)\bin\setdllcharacteristics.exe +d +n $(TargetPath)
+# End Special Build Tool
 
 !ELSEIF  "$(CFG)" == "SuRunExt - Win32 SuRun32 Unicode Release"
 
@@ -145,6 +157,12 @@ LINK32=link.exe
 # SUBTRACT BASE LINK32 /pdb:none
 # ADD LINK32 /nologo /dll /map /debug /machine:I386 /def:".\SuRunExt32.Def" /out:"../ReleaseUx64/SuRunExt32.dll" /IGNORE:4089 /OPT:REF
 # SUBTRACT LINK32 /pdb:none
+# Begin Special Build Tool
+WkspDir=.
+TargetPath=..\ReleaseUx64\SuRunExt32.dll
+SOURCE="$(InputPath)"
+PostBuild_Cmds=$(WkspDir)\bin\setdllcharacteristics.exe +d +n $(TargetPath)
+# End Special Build Tool
 
 !ENDIF 
 
